--- a/Client/tripsters/src/components/Footer/footer.css
+++ b/Client/tripsters/src/components/Footer/footer.css
@@ -1,13 +1,13 @@
 .site-footer
 {
   background-color:#D3D3D3;
-  padding:45px 0 20px;
+  padding:30px 0px 0px 20px;
   font-size:15px;
   line-height:24px;
   color:#181717;
-  position: fixed;
-  bottom: 0px;
+  position: sticky;
   left: 0px;
+  bottom: 0px;
   right: 0px;
   margin-bottom: 0px;
 }
